# Repo-Code-Line-Counting

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
code_counter/: cli.py  counter.py
test/: test_counting.py
