[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-counter"
version = "0.1.2"
description = "A command-line tool to count lines of code in a repository."
readme = "README.md"
authors = [{ name = "Xiyuan Yang", email = "yangxiyuan@sjtu.edu.cn" }]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = ["colorama", "pathspec"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/xiyuanyang-code/Repo-Code-Line-Counting.git"

[project.scripts]
count-code = "code_counter.cli:main"

[tool.setuptools]
packages = ["code_counter"]
